...
                android:id="@+id/muscle_chest_image"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:src="@drawable/icon_selector"
                android:onClick="@{() -> viewModel.click(MuscleGroupTypeFilter.CHEST)}"
                app:layout_constraintBottom_toTopOf="@+id/muscle_lowerback_image"
                app:layout_constraintEnd_toStartOf="@+id/muscle_biceps_image"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/muscle_biceps_image"
...
