...
                android:textColor="@color/colorDarkGray"
                android:textSize="18sp"
                app:layout_constraintBottom_toBottomOf="@+id/imageView20"
                app:layout_constraintStart_toEndOf="@+id/imageView20" />

            <ImageView
                android:id="@+id/update_info_image"
                android:layout_width="48dp"
                android:layout_height="36dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="16dp"
                android:alpha="0.6"
                android:scaleType="centerCrop"
...
