...
                        app:layout_constraintStart_toEndOf="@+id/textView57"
                        app:layout_constraintTop_toTopOf="@+id/imageView32"
                        app:srcCompat="@drawable/muscle_stand_icon" />


                    <ImageView
                        android:id="@+id/edit_button"
                        android:layout_width="60dp"
                        android:layout_height="48dp"
                        android:layout_marginEnd="16dp"
                        android:layout_marginBottom="8dp"
                        android:scaleType="centerCrop"
                        app:layout_constraintBottom_toBottomOf="parent"
...
